--- a/templates/notifications/notifications.html
+++ b/templates/notifications/notifications.html
@@ -45,7 +45,7 @@
 
                     <img style="width: 38px; height: 35px;" src="{% static 'images/proposta-icone.png' %}" alt="">
                     <a class="link-notificacao" href="{% url 'produtos_requisitados' %}"> Você recebeu uma proposta de
-                        aluguel</a>
+                        aluguel!</a>
 
                     <a href="{% url 'delete_notification' notification.id %}" class="delete"><img style="width: 20px;"
                             src="{% static 'images/icone-lixeira.ico' %}" alt=""></a>
@@ -57,7 +57,7 @@
                 <div class="row justify-content-between align-items-center">
 
                     <img style="width: 38px; height: 35px;" src="{% static 'images/proposta-aceita-2.png' %}" alt="">
-                    <h6>Sua proposta de aluguel foi aceita</h6>
+                    <h6>Sua proposta de aluguel foi aceita!</h6>
                     <a href="{% url 'delete_notification' notification.id %}" class="delete"><img style="width: 20px;"
                             src="{% static 'images/icone-lixeira.ico' %}" alt=""></a>
                 </div>
@@ -69,7 +69,7 @@
 
                     <img style="width: 35px; height: 32px;" src="{% static 'images/avaliar-notificacoes.ico' %}" alt="">
                     <a href="{% url 'avaliacoes_pendentes' %}" style="color: #CECA17; font-weight: 500;" class="nav-link">Avalie a sua experiencia com a
-                        negociação</a>
+                        negociação!</a>
 
                     <a href="{% url 'delete_notification' notification.id %}" class="delete"><img style="width: 20px;"
                             src="{% static 'images/icone-lixeira.ico' %}" alt=""></a>
@@ -80,7 +80,7 @@
                 <div class="row justify-content-between align-items-center">
 
                     <img style="width: 38px; height: 35px;" src="{% static 'images/proposta-recusada.png' %}" alt="">
-                    <h6>Sua proposta de aluguel foi cancelada</h6>
+                    <h6>Sua proposta de aluguel foi cancelada!</h6>
 
                     <a href="{% url 'delete_notification' notification.id %}" class="delete"><img style="width: 20px;"
                             src="{% static 'images/icone-lixeira.ico' %}" alt=""></a>
