--- a/templates/base.html
+++ b/templates/base.html
@@ -95,6 +95,12 @@
               </div>
 
               <div class="arredondar-linha">
+                <a class="dropdown-item" href="{% url 'avaliacoes_pendentes' %}">
+                  <i>Avaliações Pendentes</i>
+                  <img class="ml-2" src="{% static 'images/avaliar-notificacoes.ico' %}" alt="icone chat"></a>
+              </div>
+
+              <div class="arredondar-linha">
                 <a class="dropdown-item" href="{% url 'perguntasFrequentes' %}">
                   <i>Ajuda e suporte</i>
                   <img src="{% static 'images/icone-ajuda-2.ico' %}" class="ml-1" alt="icone ajuda"></a>
