--- a/templates/chat/meus-chats.html
+++ b/templates/chat/meus-chats.html
@@ -37,7 +37,7 @@
             </div>
 
             {% for chat in chats %}
-            <li class="list-group-item" style="border-radius: 20px;">
+            <li class="list-group-item aumentar-tamanho-mouse mt-3 col-12" style="border-radius: 20px;">
                 <div class="row">
                     <div class="row col-12 align-items-center justify-content-md-around text-center">
 
