--- a/templates/user/avaliacoesUsuario.html
+++ b/templates/user/avaliacoesUsuario.html
@@ -7,110 +7,115 @@
 {% block main %}
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <style>
-.checked {
-  color: orange;
-}
+  .checked {
+    color: orange;
+  }
 </style>
-<body>
- <div class="container">
-    
-    <br>
-    <h1> {{ usuario }} </h1>  
 
-                {% if media == 1 %}
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                {% endif %}
-                {% if media == 2 %}
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                {% endif %}
-                {% if media == 3 %}
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                {% endif %}
-                {% if media == 4 %}
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                {% endif %}
-                {% if media == 5 %}
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                {% endif %}
-               {{ media }}/5 ({{ num }} votos)
-              <br> <br> <br> <br><hr>
-    <div class="row">
-       {% for avaliacao in avaliacoes %}
-           
-        <div class="col">
-                 {% if avaliacao.rate == 1 %}
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                 {% endif %}
-                  {% if avaliacao.rate == 2 %}
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                 {% endif %}
-                  {% if avaliacao.rate == 3 %}
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                    <span class="fa fa-star"></span>
-                 {% endif %}
-                  {% if avaliacao.rate == 4 %}
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star"></span>
-                 {% endif %}
-                  {% if avaliacao.rate == 5 %}
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                    <span class="fa fa-star checked"></span>
-                 {% endif %}   
-              
-                 <br>
+<section class="container box-shadow p-3 pb-5">
 
-                 {{ avaliacao.text }}
+  <div class="text-center mb-5">
+    <h1 class="display-4 text-primary">Avaliações do Usuário</h1>
+    <span class="h6">Todas as avaliações que o usuário recebeu</span>
+  </div>
 
-                     
-              
-        </div>
-        
-            
-        {% empty %}
-        <h4>Este usuário ainda não possui avaliações!</h4>
+  <div class="row justify-content-center">
 
-        {% endfor %}
-
-
+    <div>
+      <h4> {{ usuario }} </h4>
+      {% if media == 1 %}
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star"></span>
+      <span class="fa fa-star"></span>
+      <span class="fa fa-star"></span>
+      <span class="fa fa-star"></span>
+      {% endif %}
+      {% if media == 2 %}
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star"></span>
+      <span class="fa fa-star"></span>
+      <span class="fa fa-star"></span>
+      {% endif %}
+      {% if media == 3 %}
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star"></span>
+      <span class="fa fa-star"></span>
+      {% endif %}
+      {% if media == 4 %}
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star"></span>
+      {% endif %}
+      {% if media == 5 %}
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      <span class="fa fa-star checked"></span>
+      {% endif %}
+      {{ media }}/5 ({{ num }} votos)
     </div>
+
+  </div>
+
+  <div class="row mt-5">
+    {% for avaliacao in avaliacoes %}
+
+    <div class="row col-12 text-center justify-content-center">
+      <li class="list-group-item mb-3 col-lg-6 col-12 ml-md-0 ml-4" style="border-radius: 10px;">
+        {% if avaliacao.rate == 1 %}
+        <span class="fa fa-star checked mr-1"></span>
+        <span class="fa fa-star mr-1"></span>
+        <span class="fa fa-star mr-1"></span>
+        <span class="fa fa-star mr-1"></span>
+        <span class="fa fa-star mr-1"></span>
+        {% endif %}
+        {% if avaliacao.rate == 2 %}
+        <span class="fa fa-star checked mr-1"></span>
+        <span class="fa fa-star checked mr-1"></span>
+        <span class="fa fa-star mr-1"></span>
+        <span class="fa fa-star mr-1"></span>
+        <span class="fa fa-star mr-1"></span>
+        {% endif %}
+        {% if avaliacao.rate == 3 %}
+        <span class="fa fa-star checked mr-1"></span>
+        <span class="fa fa-star checked mr-1"></span>
+        <span class="fa fa-star checked mr-1"></span>
+        <span class="fa fa-star mr-1"></span>
+        <span class="fa fa-star"></span>
+        {% endif %}
+        {% if avaliacao.rate == 4 %}
+        <span class="fa fa-star checked mr-1"></span>
+        <span class="fa fa-star checked mr-1"></span>
+        <span class="fa fa-star checked mr-1"></span>
+        <span class="fa fa-star checked mr-1"></span>
+        <span class="fa fa-star"></span>
+        {% endif %}
+        {% if avaliacao.rate == 5 %}
+        <span class="fa fa-star checked mr-1"></span>
+        <span class="fa fa-star checked mr-1"></span>
+        <span class="fa fa-star checked mr-1"></span>
+        <span class="fa fa-star checked mr-1"></span>
+        <span class="fa fa-star checked"></span>
+        {% endif %}
+
+        <h6 class="mt-3">{{ avaliacao.text }}</h6>
+      </li>
     </div>
-</body>
+
+    {% empty %}
+    <h4>Este usuário ainda não possui avaliações!</h4>
+
+    {% endfor %}
+  </div>
+
+</section>
+
+
 
 {% endblock %}
