Estilizado tela de esqueceu senha, tela de enviar email pra redefinir senha

--- a/templates/password_reset_done.html
+++ b/templates/password_reset_done.html
@@ -1,10 +1,46 @@
-{% block title %}
-Reset your password
-{% endblock %}
-{% block content %}
-<h1>Reset yourpassword</h1>
-<p>We've emailed you instructions for setting your password.</p>
 
-<p>If you don't receive an email, please make sure you've entered theaddress you registered with.</p>
+{%  extends 'base.html'%}
+{% load static %}
+{% load bootstrap %}
+{% block title %}
+Confirmação de Email
+{% endblock %}
+
+{% block main %}
+
+<section class="container logar-cadastrar-distanciamento">
+	<div class="row justify-content-center" style="color: rgb(74, 74, 74); font-weight: bold;">
+		<div class="col-12 col-lg-6 bg-white px-5 pt-4 pb-5 box-shadow" style="border-radius: 40px;">
+			<div class="text-center">
+				<div class="mb-2">
+					<img src="{% static 'images/alugoicone60x60.png' %}" alt="">
+				</div>
+				<h3>Email de redefinição de senha</h3>
+      </div>
+      
+			<div class="my-5">
+        <h5>Enviamos por e-mail instruções para redefinir sua senha. Se você não receber o e-mail, certifique-se de inserir o endereço com o qual se registrou.</h5>
+      </div>
+
+			<div class="mt-4" style="border-top: 1px solid rgba(0, 0, 0, .2);">
+				<div class="mt-4 d-flex justify-content-around">
+					<h6 class="">Não tem uma conta?</h6>
+					<h6>Já tem uma conta?</h6>
+				</div>
+				<div class="d-flex justify-content-around">
+					<a href="{% url 'cadastro' %}">Cadastre-se</a>
+					<a href="{% url 'login' %}"> Login </a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row justify-content-center mt-3">
+		<div class="col-12 col-lg-6 text-center">
+			<span style="font-size: 13px; color: #A9A9A9; font-weight: normal;">
+				Ao continuar, você concorda com os Termos de Uso e a Política de Privacidade da Alugo.
+			</span>
+		</div>
+	</div>
+</section>
 
 {% endblock %}
