--- a/templates/password_reset_form.html
+++ b/templates/password_reset_form.html
@@ -1,15 +1,44 @@
-{% block title %}
-Reset your password
+{%  extends 'base.html'%}
+{% load static %}
+{% load bootstrap %}
+{% block title %} Esqueceu sua Senha
 {% endblock %}
-{% block content %}
-<h1>Esqueceu a senha ?</h1>
+{% block main %}
 
-<p>Entre com o seu endereço e-mail cadastrado para receber uma nova senha.</p>
+<section class="container logar-cadastrar-distanciamento">
+	<div class="row justify-content-center" style="color: rgb(74, 74, 74); font-weight: bold;">
+		<div class="col-12 col-lg-6 bg-white px-5 pt-4 pb-5 box-shadow" style="border-radius: 40px;">
+			<div class="text-center">
+				<div class="mb-2">
+					<img src="{% static 'images/alugoicone60x60.png' %}" alt="">
+				</div>
+				<h3>Esqueceu sua senha?</h3>
+			</div>
+			<form action="." method="post">
+				{{ form|bootstrap }}
+				<small class="form-text text-muted pb-3">Entre com o seu endereço e-mail cadastrado para receber uma nova senha.</small>
+				{% csrf_token %}
+				<button type="submit" class="btn btn-primary botao-redondo btn-block"> Enviar Email </button>
+			</form>
 
-	<form action="." method="post">
-			{{ form.as_p }}<p>
-		<input type="submit" value="Enviar e-mail">
-		</p>{% csrf_token %}
-	</form>
-	<a href="{% url 'login' %}"> Voltar </a>
+			<div class="mt-4" style="border-top: 1px solid rgba(0, 0, 0, .2);">
+				<div class="mt-4 d-flex justify-content-around">
+					<h6 class="">Não tem uma conta?</h6>
+					<h6>Já tem uma conta?</h6>
+				</div>
+				<div class="d-flex justify-content-around">
+					<a href="{% url 'cadastro' %}">Cadastre-se</a>
+					<a href="{% url 'login' %}"> Login </a>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="row justify-content-center mt-3">
+		<div class="col-12 col-lg-6 text-center">
+			<span style="font-size: 13px; color: #A9A9A9; font-weight: normal;">
+				Ao continuar, você concorda com os Termos de Uso e a Política de Privacidade da Alugo.
+			</span>
+		</div>
+	</div>
+</section>
 {% endblock %}
