--- a/templates/password_reset_complete.html
+++ b/templates/password_reset_complete.html
@@ -1,1 +1,11 @@
-{% block title %}Password reset{% endblock %}{% block content %}<h1>Password set</h1><p>Your password has been set. You can <a href="/" >log in now</a></p>{% endblock %}
+{% block title %}
+Password reset
+{% endblock %}
+{% block content %}
+
+<h1>Password set</h1>
+
+<p>Your password has been set. You can 
+    <a href="/" >log in now</a>
+</p>
+{% endblock %}
