correção no voltar da pagina denuncia

--- a/templates/products/denuncia.html
+++ b/templates/products/denuncia.html
@@ -33,7 +33,7 @@
                 {{ form|bootstrap }}
 
                 <div class="d-flex justify-content-between">
-                    <a href="{% url 'list_products' user.id %}" class="btn btn-primary px-4 mt-3 mt-lg-0 botao-redondo"> Voltar</a>
+                    <a href="{% url 'detail_product' productId %}" class="btn btn-primary px-4 mt-3 mt-lg-0 botao-redondo"> Voltar</a>
                     <button type="submit" class="btn btn-primary px-4 mt-3 mt-lg-0 botao-redondo">
                         Enviar</button>
                 </div>
